[package]
edition = "2021"
name = "dhcp-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {git = "https://github.com/shipsimfan/lib-config.git", branch = "main"}
http = {git = "https://github.com/shipsimfan/lib-http.git", branch = "main"}
logging = {git = "https://github.com/shipsimfan/lib-logging.git", branch = "main"}
